# Advertisement-Tool-

./: .env.example  .gitignore  .npmrc  .prettierignore  .prettierrc.json  ARCHITECTURE.md  ENVIRONMENT-VARIABLES.md  FILE-NAMING-RULES.md  FOLDER-RULES.md  PROJECT-MAP.md  PROJECT_STATUS.md  README.md  download_models.py  package-lock.json  package.json  tsconfig.base.json  typecheck-api.txt  typecheck-output.txt
apps/admin/: index.html  package.json  vite.config.ts
apps/admin/src/: App.tsx  (+2 more)
apps/ai-worker/: .gitignore  pyproject.toml  test-ai.js  vertexClient.js
apps/ai-worker/bricks_maker_ai_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/ai-worker/src/: __init__.py  cleanup.py  local_ai.py  main.py  main.py.backup
apps/ai-worker/src/providers/: __init__.py  base.py  huggingface_provider.py  provider_registry.py
apps/ai-worker/src/queue/: __init__.py  job_queue.py
apps/ai-worker/tests/: test_huggingface_provider.py  test_job_queue.py  test_worker_generation.py
apps/api/: package.json
apps/render-worker/: package.json  tsconfig.json
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
docs/: VIDEO_AI_RUNTIME.md  VIDEO_AI_SECURITY.md  VIDEO_AI_TESTING.md
docs/architecture/: BACKEND-EXPANSION-FOUNDATION.md  CAPACITY_BASELINE.md  CURRENT-CONFIG-FILES.txt  CURRENT-SOURCE-INVENTORY.txt  FRONTEND_BACKEND_WIRING.md  MIGRATION-MANIFEST.md  PHASE-1-DEPENDENCY-AUDIT.txt  PHASE-1-FRONTEND-AUDIT.txt  PHASE-1-FRONTEND-PRECISE-AUDIT.txt  PHASE-1-MIGRATION-READINESS.txt  PHASE-1A-EXPANDED-IMPORT-AUDIT.txt  PHASE-1A-FINAL-IMPORT-AUDIT-2.txt  PHASE-1A-FINAL-IMPORT-AUDIT.txt  PHASE-1A-LOCK.md  PHASE-1A-SHELL-MERGE-AUDIT.txt  PHASE-1A-STAGED-IMPORT-AUDIT.txt  PHASE-1B-LAYOUT-AUDIT.txt  STEP-51-LAYOUT-CSS-AUDIT.txt
docs/qa/: BUTTON_AUDIT.md
docs/setup/: LOCAL-WAN-DEPENDENCIES.md
migration-backups/before-phase-1a-web/: index.html  package.json
migration-backups/before-step-38-strict-types/: ThemeContext.tsx
migration-backups/before-step-39/: ThemeContext.tsx
migration-backups/before-step-49-app-integration/: App.tsx
migration-backups/before-step-54-tailwind/: styles.css
migration-backups/before-step-80a-studio-file-guard/: StudioView.tsx
migration-backups/before-step-81-studio-activation/: App.tsx
migration-backups/before-step-92-adsview-types/: AdsView.tsx
migration-backups/before-step-93-adsview-imageurl/: AdsView.tsx
migration-backups/before-step-95-templates-activation/: App.tsx
(+233 files in other folders)
