[project]
name = "bricks-maker-ai-worker"
version = "0.1.0"
description = "Wan2.1 and AI generation worker for Bricks Maker Advertisement Studio."
requires-python = ">=3.11,<3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
