[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bricks-maker-ai-worker"
version = "0.1.0"
description = "Wan2.1 and AI generation worker for Bricks Maker Advertisement Studio."
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.116,<1.0",
  "uvicorn[standard]>=0.35,<1.0",
  "pydantic>=2.11,<3.0",
  "huggingface_hub>=1.7,<2.0"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy"
]
local-wan = [
  "torch>=2.4,<3.0",
  "torchvision>=0.19,<1.0",
  "transformers>=4.49,<6.0",
  "sentencepiece>=0.2,<1.0",
  "tokenizers>=0.21,<1.0",
  "safetensors>=0.5,<1.0",
  "accelerate>=1.2,<2.0",
  "diffusers>=0.32,<1.0",
  "numpy>=1.26,<2.0",
  "pillow>=10,<13",
  "opencv-python>=4.10,<4.12",
  "imageio>=2.36,<3.0",
  "imageio-ffmpeg>=0.5,<1.0",
  "easydict>=1.13,<2.0",
  "einops>=0.8,<1.0",
  "ftfy>=6.3,<7.0",
  "scipy>=1.14,<2.0",
  "decord>=0.6,<1.0; python_version < '3.13'"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
